Upgrade to Grails 3.1.9 (#19)

--- a/bc-cdm/grails-app/conf/application.yml
+++ b/bc-cdm/grails-app/conf/application.yml
@@ -15,3 +15,8 @@ spring:
     groovy:
         template:
             check-template-location: false
+# Spring Actuator Endpoints are Disabled by Default
+endpoints:
+    enabled: false
+    jmx:
+        enabled: true
