--- a/bc-cdm/build.gradle
+++ b/bc-cdm/build.gradle
@@ -41,16 +41,12 @@ dependencies {
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
     console "org.grails:grails-console"
-    profile "org.grails.profiles:plugin:3.1.8"
+    profile "org.grails.profiles:plugin"
     provided "org.grails:grails-plugin-services"
     provided "org.grails:grails-plugin-domain-class"
     testCompile "org.grails:grails-plugin-testing"
 
     compile "commons-lang:commons-lang:2.6"
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapperVersion
 }
 
 grailsPublish {
@@ -67,3 +63,4 @@ grailsPublish {
     portalUser = ""
     portalPassword = ""
 }
+
