--- a/bell-core-sys/build.gradle
+++ b/bell-core-sys/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencyManagement {
     imports {
         mavenBom "org.grails:grails-bom:$grailsVersion"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
     applyMavenExclusions false
 }
@@ -49,6 +50,7 @@ dependencies {
 
     compile "commons-lang:commons-lang:2.6"
     compile "org.grails:grails-datastore-rest-client"
+    compile "com.netflix.eureka:eureka-client"
 }
 grailsPublish {
     // TODO: Provide values here
