--- a/bell-core-sys/build.gradle
+++ b/bell-core-sys/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencyManagement {
     imports {
         mavenBom "org.grails:grails-bom:$grailsVersion"
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
     }
     applyMavenExclusions false
 }
@@ -47,9 +47,8 @@ dependencies {
 
     provided "org.postgresql:postgresql"
     provided "org.grails.plugins:hibernate5"
-    provided "org.hibernate:hibernate-core:5.1.1.Final"
+    provided "org.hibernate:hibernate-core:$hibernateVersion"
 
-    provided "commons-lang:commons-lang:2.6"
     provided "org.grails:grails-datastore-rest-client"
     provided "com.netflix.eureka:eureka-client"
 }
