--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-grailsVersion=3.2.0
+grailsVersion=3.2.1
 gradleWrapperVersion=3.1
 hibernateVersion=5.1.1.Final
-springCloudVersion=Camden.RELEASE
+springCloudVersion=Camden.SR1
