工作流重构 (#30)

--- a/bell-core-sys/build.gradle
+++ b/bell-core-sys/build.gradle
@@ -19,6 +19,7 @@ apply plugin:"org.grails.grails-plugin-publish"
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "https://repo.spring.io/libs-milestone" }
 }
 
 dependencyManagement {
@@ -51,6 +52,8 @@ dependencies {
 
     provided "org.grails:grails-datastore-rest-client"
     provided "com.netflix.eureka:eureka-client"
+
+    compile 'org.springframework.statemachine:spring-statemachine-core:1.2.0.M1'
 }
 grailsPublish {
     // TODO: Provide values here
