支持菜单中的departmentId变量 (#36)

--- a/bell-core-cdm/build.gradle
+++ b/bell-core-cdm/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 
     compile "commons-lang:commons-lang:2.6"
 }
+
+bootRepackage.enabled = false
+
 grailsPublish {
     // TODO: Provide values here
     user = 'user'
