Refactor report service (#53)

--- a/bell-core-sys/build.gradle
+++ b/bell-core-sys/build.gradle
@@ -49,10 +49,10 @@ dependencies {
     provided "org.grails.plugins:hibernate5"
     provided "org.hibernate:hibernate-core:$hibernateVersion"
 
-    provided "org.grails:grails-datastore-rest-client"
     provided "com.netflix.eureka:eureka-client"
 
     compile 'org.springframework.statemachine:spring-statemachine-core:1.2.1.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-commons'
 }
 
 bootRepackage.enabled = false
