Upgrade to grails 3.2.7 (#62)

--- a/bell-core-cdm/build.gradle
+++ b/bell-core-cdm/build.gradle
@@ -21,13 +21,6 @@ repositories {
     maven { url "https://repo.grails.org/grails/core" }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
-
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
@@ -36,8 +29,8 @@ dependencies {
     profile "org.grails.profiles:plugin"
     provided "org.grails:grails-plugin-services"
     provided "org.grails:grails-plugin-domain-class"
+    provided "org.grails.plugins:cache"
     testCompile "org.grails:grails-plugin-testing"
-
     compile "commons-lang:commons-lang:2.6"
 }
 
