--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-grailsVersion=3.2.6
-gradleWrapperVersion=3.1
+grailsVersion=3.2.7
+gormVersion=6.0.9.RELEASE
+gradleWrapperVersion=3.4.1
 hibernateVersion=5.1.4.Final
 springCloudVersion=Camden.SR5
