Update to grails 3.1.8 (#98)

--- a/bell-core-sys/grails-app/conf/application.yml
+++ b/bell-core-sys/grails-app/conf/application.yml
@@ -1,10 +1,7 @@
 grails:
     profile: plugin
     codegen:
-        defaultPackage: bell.core.sys
-    spring:
-        transactionManagement:
-            proxies: false
+        defaultPackage: cn.edu.bnuz.bell
     gorm:
         reactor:
             # Whether to translate GORM events into Reactor events
